[tool.poetry]
name = "repl-nix-weather-courses-discord-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.4.0"
flask = "^3.0.3"
replit = "^4.0.0"
icalendar = "^5.0.13"
ics = "^0.7.2"
requests = "^2.32.3"
validators = "^0.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
